--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,17 +31,33 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const oldDudes = inventors.filter(inventor => inventor.year >= 1500 && inventor.year <= 1599);
+    console.table(oldDudes);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    const names = inventors.map(inventor => {
+      const firstName = inventor.first;
+      const lastName = inventor.last;
+      return `${firstName} ${lastName}`;
+    })
+
+    console.log(names);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-
+    const birthdate = inventors.sort((a, b) => a.year > b.year ? 1 : -1);
+    console.table(birthdate);
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const totalLife = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year);
+    }, 0);
+    console.log(totalLife);
 
     // 5. Sort the inventors by years lived
+    const yearLived = inventors.sort((a, b) => (a.passed - a.year) < (b.passed - b.year) ? 1 : -1);
+    console.table(yearLived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
@@ -49,10 +65,26 @@
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const lastNames = people.sort((a, b) => {
+      const [aLast, aFirst] = a.split(', ');
+      const [bLast, bFirst] = b.split(', ');
+      return aLast > bLast ? 1 : -1;
+    });
+
+    console.log(lastNames);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const instances = data.reduce((obj, item) => {
+      if(!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {}); 
+    console.log(instances);
 
   </script>
 </body>
